--- a/o.html
+++ b/o.html
@@ -51,15 +51,15 @@ Graphes et Algorithmes Projet : calcul d’un couplage dans un graphe
 biparti</h1>
 <ul>
 <li>Joachim Larrouy : <a
-href="mailto:nathan.rissot@etu.univ-orleans.fr"><code>joachim.larrouy@etu.univ-orleans.fr</code></a></li>
+href="mailto:joachim.larrouy@etu.univ-orleans.fr"><code>joachim.larrouy@etu.univ-orleans.fr</code></a></li>
 <li>Nathan Rissot : <a
 href="mailto:nathan.rissot@etu.univ-orleans.fr"><code>nathan.rissot@etu.univ-orleans.fr</code></a></li>
 </ul>
 <h2 id="utilisation">Utilisation</h2>
-<p>Programme a été développé avec la version 3.13 de python. Le code
-utilisant des annotations de type, une version 3.5 ou ultérieure est
-requis.</p>
-<p>Le programme attend en arguement un chemin vers le fichier contenant
+<p>Le programme a été développé et testé uniquement avec la version 3.13
+de python, nous ne pouvons pas garantir le bon fonctionnement dans une
+version antérieur à celle ci</p>
+<p>Le programme attend en argument un chemin vers le fichier contenant
 la représentation de l’échiquier mutilé, et un nom pour le fichier de
 sortie en cas de succés de pavage.</p>
 <pre><code>py ./main.py &lt;fichier_entrée.txt&gt; &lt;nom_fichier_sortie&gt;</code></pre>
